--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "numpy >=1.23",
     "scipy >=1.10.1",
     "matplotlib >=3.5",
-    "pandas"
+    "pandas",
+    "xara"
 ]
 
 [project.urls]
